alterando pra funcionar em portugues